fix: add two-stage choice standardization
